--- a/index.html
+++ b/index.html
@@ -25,31 +25,36 @@
 
   <script type="text/javascript">
     'use strict';
+    // Test for local storage
     function supportsLocalStorage() {
-      try{
-      return 'localStorage' in window && window['localStorage'] != null;
-    } catch (e){
-      return false;
-    }
-    }   
-
-    function getRecentSearches() {
-      var searches = LocalStorage.getItem ('recentSearches');
-      if(searches){
-        return JSON.parse(searches);
-      }else{
-        return [];
+      try {
+        return 'localStorage' in window && window['localStorage'] !== null;
+      } catch(e){
+        return false;
       }
     }
 
-    function saveSearchString() {
+    // Retrieve searches from Local Storage, return an array
+    function getRecentSearches() {
+      var searches = localStorage.getItem('recentSearches');
+      if (searches) {
+        return JSON.parse(searches);
+      }
+      return [];
+    }
+
+    // Validate and save strings to store of past searches
+    function saveSearchString(str) {
       var searches = getRecentSearches();
-      if(!str || searches.indexOf(str) > -1){
+      if (searches.indexOf(str) > -1 || !str) {
         return false;
       }
       searches.push(str);
-      licalStorage.setItem('recentSearches', JSON.stringify(str));
-    }  
+      localStorage.setItem('recentSearches', JSON.stringify(searches));
+      return true;
+    }
+
+    // Clear out searches
     function removeSearches() {
       localStorage.removeItem('recentSearches');
     }
@@ -67,32 +72,33 @@
     }
 
     window.onload = function() {
-      
-      if(supportedLocalStorage()){
-      var searchForm = document.getElementById('searchForm');
-      var searchBar = document.getElementById('searchBar');
-      var recentSearchList = document.getElementById('recentSearchList');
-      var clearButton = document.getElementById('clearStorage');
+      // Make sure Local Storage exists before trying to use it
+      if (supportsLocalStorage()) {
+        // Get references to DOM elements
+        var searchForm = document.getElementById('searchForm');
+        var searchBar = document.getElementById('searchBar');
+        var recentSearchList = document.getElementById('recentSearchList');
+        var clearButton = document.getElementById('clearStorage');
 
-      // Initialize display list
-      var recentSearches = getRecentSearches();
-      recentSearches.forEach(function(searchString) {
-        appendListItem(recentSearchList,searchString);
-      });
+        // Initialize display list
+        var recentSearches = getRecentSearches();
+        recentSearches.forEach(function(searchString) {
+          appendListItem(recentSearchList,searchString);
+        });
 
-      // Set event handlers
-      searchForm.addEventListener('submit', function(event) {
-        var searchString = searchBar.value;
-        if (saveSearchString(searchString)) {
-          appendListItem(recentSearchList, searchString);
-        }
-      });
+        // Set event handlers
+        searchForm.addEventListener('submit', function(event) {
+          var searchString = searchBar.value;
+          if (saveSearchString(searchString)) {
+            appendListItem(recentSearchList, searchString);
+          }
+        });
 
-      clearButton.addEventListener('click', function(event) {
-        removeSearches();
-        clearList(recentSearchList);
-      });
-     }
+        clearButton.addEventListener('click', function(event) {
+          removeSearches();
+          clearList(recentSearchList);
+        });
+      }
     };
   </script>
 </body>
